# alignment_calculation

./: .gitignore  LICENSE  MANIFEST.in  README.md  perform_alignment_calculations.ipynb  perform_pacta_calculations.ipynb  pyproject.toml  requirements.txt  setup.py
alignment_calculation/: __init__.py  ac_config.py  alignment_results.py  calculator.py  load_climate_data.py  load_pacta_data.py  make_loanbook.py  parameters.yaml  prepare_loanbook.py  read_data.py  read_data_anacredit.py
alignment_calculation/data/company_data/: company_analytics.csv  company_indicators.csv  company_information.csv
alignment_calculation/data/loan_data/: loan_companies.csv  loan_data.csv
alignment_calculation/data/matching_data/: matching.csv
alignment_calculation/data/scenario_data/: IEA-NZE-2021-CO2-Intensity-for-Steel-Cement-start-yr-2021.csv  IEA-WEO-NZE-2021-Fossil-Fuels-Power-Auto-start-yr-2021.csv  JRC-GECO-2021-Auto-HDV-Fossil-Fuels-Power-start-yr-2021.csv  JRC-GECO-2021-CO2-Intensity-Steel-Aviation-start-yr-2021.csv  JRC-GECO-2022-Auto-HDV-Fossil-Fuels-Power-start-yr-2022.csv  geco2022_ei_p4b.csv  region_geco2022.csv  region_weo2022.csv  weo2022_ei_p4b.csv  weo2022_p4b.csv
test/: test_ac_config.py  test_alignment_results.py  test_calculator.py  test_load_climate_data.py  test_prepare_loanbook.py  test_read_data.py
